--- a/index.html
+++ b/index.html
@@ -5,11 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Statki!</title>
-
+    <style>
+    td{
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        background: grey;
+    }
+    td.cell_unknown{
+        background: blue;
+    }
+    td.cell_miss{
+        background: green;
+    }
+    td.cell-hit{
+        background: red;
+    }
+    </style>
 </head>
 <body>
     <main id="game">
-        
+        <table id="board">
+            <tr id="cellContainer">
+
+            </tr>
+        </table>
         
     </main>
     <script src="game.js" type="text/javascript"></script>
