--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Statki!</title>
     <style>
     td{
-        width: 40px;
-        height: 40px;
+        width: 60px;
+        height: 60px;
         text-align: center;
         background: grey;
     }
@@ -26,9 +26,9 @@
 <body>
     <main id="game">
         <table id="board">
-            <tr id="cellContainer">
+            <div id="boardContainer">
 
-            </tr>
+            </div>
         </table>
         
     </main>
