add observers to game.js

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         background: grey;
     }
     td.cell_unknown{
-        background: blue;
+        background: grey;
     }
     td.cell_miss{
-        background: green;
+        background: blue;
     }
-    td.cell-hit{
+    td.cell_hit{
         background: red;
     }
     </style>
