final result in index.html and game.js

--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
     td.cell_hit{
         background: red;
     }
+    table{
+        float: left;
+        margin: 10px;
+    }
+    body{
+        background: linear-gradient(hotpink, white, lightblue); 
+        height: 100vh;
+    }
     </style>
 </head>
 <body>
     <main id="game">
         <table id="board">
-            <div id="boardContainer">
+            <div id="gameContainer">
 
             </div>
         </table>
